--- a/index.html
+++ b/index.html
@@ -235,6 +235,20 @@
   padding-right: 36px;
 }
 
+/* Make the placeholder ("Select Country") match the input placeholder color */
+.custom-form select.country-select:invalid{
+  color: rgba(43,38,32,.65);
+}
+
+/* Once they pick a real country, switch to normal text color */
+.custom-form select.country-select{
+  color:#2b2620;
+}
+
+/* Safari/Chrome sometimes ignore select:invalid color unless we set this too */
+.custom-form select.country-select option{
+  color:#2b2620;
+}
 
     .custom-form input::placeholder{
       color: rgba(43,38,32,.65);
@@ -372,6 +386,26 @@
 </p>
 </div> <!-- closes .hero-text -->
 
+<div class="bottom">
+  <p class="quote">“Remember, your reviews are the only applause writers ever get.”</p>
+  <p class="social-line">CLICK ICON TO FOLLOW FOR WEEKLY DEALS:</p>
+
+  <div class="icons">
+    <a class="icon-btn ig" href="https://www.instagram.com/pageturnerbc/?ref=ptbc" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
+      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm10 2H7a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm-5 4a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6zm5.2-.9a1.1 1.1 0 1 1 0 2.2 1.1 1.1 0 0 1 0-2.2z"/>
+      </svg>
+    </a>
+
+    <a class="icon-btn fb" href="https://www.facebook.com/PageTurnerBookClub?ref=ptbc" target="_blank" rel="noopener noreferrer" aria-label="Facebook">
+      <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
+        <path d="M22 12a10 10 0 1 0-11.5 9.9v-7H8v-3h2.5V9.6c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5V12H17l-.4 3h-2.6v7A10 10 0 0 0 22 12z"/>
+      </svg>
+    </a>
+  </div>
+</div>
+
+
 <!-- Bottom-right form -->
 <div class="form-wrap">
   <aside class="card" aria-label="Join the mailing list form">
@@ -388,8 +422,10 @@
       <input name="last" type="text" placeholder="Last Name" required />
       <input name="email" type="email" placeholder="Email Address" required />
 
-      <select name="country" required>
-        <option value="" disabled selected>Select Country</option>
+   <select name="country" required class="country-select">
+
+      <option value="" disabled selected class="placeholder">Select Country</option>
+
 
         <option value="United States">United States</option>
         <option value="Canada">Canada</option>
@@ -436,10 +472,7 @@
 
     <p class="note">No spam. Leave anytime.</p>
  
-        <p class="quote">“Remember, your reviews are the only applause writers ever get.”</p>
-        <p class="social-line">CLICK ICON TO FOLLOW FOR WEEKLY DEALS:</p>
-
-        <div class="icons">
+     
           <a class="icon-btn ig" href="https://www.instagram.com/pageturnerbc/?ref=ptbc" target="_blank" rel="noopener noreferrer" aria-label="Instagram">
             <svg class="icon" viewBox="0 0 24 24" aria-hidden="true">
               <path d="M7 2h10a5 5 0 0 1 5 5v10a5 5 0 0 1-5 5H7a5 5 0 0 1-5-5V7a5 5 0 0 1 5-5zm10 2H7a3 3 0 0 0-3 3v10a3 3 0 0 0 3 3h10a3 3 0 0 0 3-3V7a3 3 0 0 0-3-3zm-5 4a5 5 0 1 1 0 10 5 5 0 0 1 0-10zm0 2a3 3 0 1 0 0 6 3 3 0 0 0 0-6zm5.2-.9a1.1 1.1 0 1 1 0 2.2 1.1 1.1 0 0 1 0-2.2z"/>
