--- a/index.html
+++ b/index.html
@@ -374,7 +374,7 @@
             <aside class="card" aria-label="Join the mailing list form">
               <h2>Free Offers Every Month</h2>
 
-              <form class="custom-form" method="POST" action="PASTE_GOOGLE_APPS_SCRIPT_WEB_APP_URL_HERE">
+              <form class="custom-form" method="POST" action="https://script.google.com/macros/s/AKfycbwhXmWZIAPHBGrJMphYxc57uOZZh5SGe91AN1If660JyTbTWHJCGm4BIxFwCqRUmPjVyQ/exec">
                 <input type="hidden" name="redirect" value="thankyou.html" />
                 <input type="hidden" name="source" value="PTBC Website" />
 
