--- a/index.html
+++ b/index.html
@@ -375,7 +375,8 @@
               <h2>Free Offers Every Month</h2>
 
               <form class="custom-form" method="POST" action="https://script.google.com/macros/s/AKfycbwhXmWZIAPHBGrJMphYxc57uOZZh5SGe91AN1If660JyTbTWHJCGm4BIxFwCqRUmPjVyQ/exec">
-                <input type="hidden" name="redirect" value="thankyou.html" />
+               <input type="hidden" name="redirect" value="thank-you.html" />
+
                 <input type="hidden" name="source" value="PTBC Website" />
 
                 <input name="first" type="text" placeholder="First Name" required />
