--- a/thank-you.html
+++ b/thank-you.html
@@ -3,21 +3,14 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>You're In — Page Turner Book Club</title>
-
-  <!-- OPTIONAL Pixel event -->
-  <!--
-  <script>
-    // fbq('track', 'Lead');
-  </script>
-  -->
+  <title>Check Your Inbox — Page Turner Book Club</title>
 
   <style>
     :root{
       --bg:#0b0f14;
       --text:#f3f0ea;
-      --muted:#cfc6b8;
-      --gold:#f0d28a;
+      --muted: rgba(243,240,234,.84);
+      --gold: rgba(240,210,138,.95);
       --border:rgba(255,255,255,.14);
       --shadow: 0 18px 60px rgba(0,0,0,.55);
       --radius:18px;
@@ -28,18 +21,20 @@
       display:grid;
       place-items:center;
       padding:22px;
-      background: radial-gradient(900px 600px at 30% 10%, rgba(240,210,138,.12), transparent 60%),
-                  var(--bg);
+      background:
+        radial-gradient(900px 600px at 30% 10%, rgba(240,210,138,.12), transparent 60%),
+        radial-gradient(900px 600px at 80% 40%, rgba(90,120,150,.10), transparent 60%),
+        var(--bg);
       color: var(--text);
       font-family: ui-serif, Georgia, "Times New Roman", Times, serif;
     }
     .card{
       width:min(820px, 100%);
       border:1px solid var(--border);
-      background: rgba(15,16,18,.60);
+      background: rgba(15,16,18,.62);
       border-radius: var(--radius);
       box-shadow: var(--shadow);
-      padding: 22px 22px 18px;
+      padding: 26px 22px 20px;
       backdrop-filter: blur(10px);
       text-align:center;
     }
@@ -51,22 +46,33 @@
     }
     p{
       margin: 0 0 12px;
-      color: rgba(243,240,234,.86);
+      color: var(--muted);
       font-size: 18px;
+    }
+    .gold{
+      color: var(--gold);
+      font-weight: 700;
     }
     .quote{
       margin-top: 14px;
       font-style: italic;
       font-size: 20px;
-      color: rgba(240,210,138,.95);
+      color: var(--gold);
+    }
+    .small{
+      font-size: 15px;
+      opacity: .9;
+      margin-top: 8px;
     }
   </style>
 </head>
 
 <body>
   <div class="card">
-    <h1>Welcome to the club.</h1>
-    <p>You’re on the list for author interviews and free-book promos.</p>
+    <h1>Check your inbox to get your bonus freebie.</h1>
+    <p>You’re officially in the Page Turner Book Club.</p>
+    <p class="gold">Your download link is on its way.</p>
+    <p class="small">Allow up to 20 minutes for delivery, and check Promotions/Spam if needed.</p>
     <p class="quote">“Remember, your reviews are the only applause writers ever get.”</p>
   </div>
 </body>
