--- a/index.html
+++ b/index.html
@@ -232,13 +232,16 @@
       padding-right: 36px;
     }
 
-    /* ✅ Reliable placeholder color for the select */
- .custom-form select.country-select{
+/* Base text color once a country is selected */
+.custom-form select.country-select{
   color:#2b2620;
 }
+
+/* Placeholder color when nothing is selected */
 .custom-form select.country-select:invalid{
   color: rgba(43,38,32,.65);
 }
+
 
 
     /* button */
