--- a/index.html
+++ b/index.html
@@ -7,17 +7,15 @@
   <meta name="description" content="Free books. Support authors. Fuel your next binge. Join Page Turner Book Club for weekly deals and author interviews." />
 
   <style>
-
-
     /* Honeypot: invisible to humans, bait for bots */
-.hp-field{
-  position:absolute !important;
-  left:-9999px !important;
-  top:auto !important;
-  width:1px !important;
-  height:1px !important;
-  overflow:hidden !important;
-}
+    .hp-field{
+      position:absolute !important;
+      left:-9999px !important;
+      top:auto !important;
+      width:1px !important;
+      height:1px !important;
+      overflow:hidden !important;
+    }
 
     :root{
       --bg:#0b0f14;
@@ -244,17 +242,15 @@
       padding-right: 36px;
     }
 
-/* Base text color once a country is selected */
-.custom-form select.country-select{
-  color:#2b2620;
-}
+    /* Base text color once a country is selected */
+    .custom-form select.country-select{
+      color:#2b2620;
+    }
 
-/* Placeholder color when nothing is selected */
-.custom-form select.country-select:invalid{
-  color: rgba(43,38,32,.65);
-}
-
-
+    /* Placeholder color when nothing is selected */
+    .custom-form select.country-select:invalid{
+      color: rgba(43,38,32,.65);
+    }
 
     /* button */
     .custom-form button{
@@ -271,7 +267,7 @@
     }
 
     .custom-form button:hover{ filter: brightness(1.06); }
-    .custom-form button:active{ transform: translateY(1px); } 
+    .custom-form button:active{ transform: translateY(1px); }
 
     .note{
       margin: 10px 0 0;
@@ -394,19 +390,15 @@
               <h2>Free Offers Every Month</h2>
 
               <form class="custom-form" method="POST" action="https://script.google.com/macros/s/AKfycbwhXmWZIAPHBGrJMphYxc57uOZZh5SGe91AN1If660JyTbTWHJCGm4BIxFwCqRUmPjVyQ/exec">
-               <input type="hidden" name="redirect" value="thank-you.html" />
-
+                <input type="hidden" name="redirect" value="thank-you.html" />
                 <input type="hidden" name="source" value="PTBC Website" />
 
                 <input name="first" type="text" placeholder="First Name" required />
                 <input name="last" type="text" placeholder="Last Name" required />
                 <input name="email" type="email" placeholder="Email Address" required />
 
-              <select name="country" required class="country-select">
-  <option value="" disabled selected>Select Country</option>
-  ...
-</select>
-
+                <select name="country" required class="country-select">
+                  <option value="" disabled selected hidden>Select Country</option>
 
                   <option value="United States">United States</option>
                   <option value="Canada">Canada</option>
@@ -447,11 +439,12 @@
 
                   <option value="Other">Other</option>
                 </select>
-                <div class="hp-field" aria-hidden="true">
-  <label>Leave this empty</label>
-  <input type="text" name="company" tabindex="-1" autocomplete="off" />
-</div>
 
+                <!-- Honeypot anti-bot field -->
+                <div class="hp-field" aria-hidden="true">
+                  <label>Leave this empty</label>
+                  <input type="text" name="company" tabindex="-1" autocomplete="off" />
+                </div>
 
                 <button type="submit">Join the Club</button>
               </form>
@@ -463,7 +456,7 @@
         </div>
       </div>
 
-      <!-- Footer (back where it belongs) -->
+      <!-- Footer -->
       <div class="bottom">
         <p class="quote">“Remember, your reviews are the only applause writers ever get.”</p>
         <p class="social-line">CLICK ICON TO FOLLOW FOR WEEKLY DEALS:</p>
