--- a/index.html
+++ b/index.html
@@ -374,9 +374,13 @@
             <h1 class="hero-h1">Get Free Books</h1>
             <p class="genres">Mystery ★ Thriller ★ Paranormal</p>
 
-            <a class="btn-primary" href="PASTE_BOOKFUNNEL_URL_HERE" target="_blank" rel="noopener noreferrer">
-              TAKE ME TO THIS MONTH'S FREEBIES →
-            </a>
+         <a class="btn-primary"
+   href="https://books.bookfunnel.com/valentinefreebies/imzitc01b6"
+   target="_blank"
+   rel="noopener noreferrer">
+  TAKE ME TO THIS MONTH'S FREEBIES →
+</a>
+
 
             <p class="subline">
               Join the club and mailing list for other free offers.
