--- a/index.html
+++ b/index.html
@@ -338,12 +338,24 @@
     }
 
     /* Mobile */
-    @media (max-width: 920px){
-      .top-copy{font-size: 28px}
-      .hero-h1{font-size: 54px}
-      .form-wrap{justify-content:center}
-      .card{max-width: 420px}
-    }
+   @media (max-width: 600px){
+
+  .hero h1,
+  .headline,
+  .top-headline {
+    font-size: 34px !important;
+    line-height: 1.2 !important;
+    letter-spacing: 0.3px;
+    padding: 0 16px;
+  }
+
+  .hero {
+    padding-top: 40px;
+    padding-bottom: 30px;
+  }
+
+}
+
 
     @media (max-width: 520px){
       .logo{width: 118px}
