--- a/thank-you.html
+++ b/thank-you.html
@@ -5,6 +5,28 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Check Your Inbox — Page Turner Book Club</title>
 
+  <!-- Meta Pixel Code -->
+  <script>
+  !function(f,b,e,v,n,t,s)
+  {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+  n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+  if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+  n.queue=[];t=b.createElement(e);t.async=!0;
+  t.src=v;s=b.getElementsByTagName(e)[0];
+  s.parentNode.insertBefore(t,s)}(window, document,'script',
+  'https://connect.facebook.net/en_US/fbevents.js');
+
+  fbq('init', '1266134602043216');
+  fbq('track', 'PageView');
+  fbq('track', 'CompleteRegistration');
+  </script>
+
+  <noscript>
+  <img height="1" width="1" style="display:none"
+  src="https://www.facebook.com/tr?id=1266134602043216&ev=PageView&noscript=1"/>
+  </noscript>
+  <!-- End Meta Pixel Code -->
+
   <style>
     :root{
       --bg:#0b0f14;
@@ -26,7 +48,7 @@
       min-height:100vh;
       display:grid;
       place-items:center;
-      padding: 16px; /* tighter outer framing so hero feels bigger */
+      padding: 16px;
       font-family: ui-serif, Georgia, "Times New Roman", Times, serif;
       background:
         radial-gradient(1100px 700px at 15% 0%, rgba(217,178,95,.14), transparent 60%),
@@ -35,10 +57,9 @@
       color:#fff;
     }
 
-    /* Background image layer */
     .stage{
       width: min(1100px, 100%);
-      min-height: 78vh;              /* gives the hero room to breathe */
+      min-height: 78vh;
       display:grid;
       place-items:center;
       border-radius: 22px;
@@ -49,11 +70,11 @@
       background:
         linear-gradient(180deg, rgba(0,0,0,.58), rgba(0,0,0,.30) 40%, rgba(0,0,0,.66)),
         url("assets/banner.jpg") center/cover no-repeat;
-      padding: 22px 16px;            /* less padding = bigger hero feel */
+      padding: 22px 16px;
     }
 
     .paper{
-      width: min(760px, 92%);        /* closer to your reference proportions */
+      width: min(760px, 92%);
       background: linear-gradient(0deg, rgba(239,230,216,.96), rgba(239,230,216,.96));
       color: var(--ink);
       border: 1px solid var(--border);
@@ -64,7 +85,6 @@
       text-align:center;
     }
 
-    /* subtle paper grain */
     .paper:before{
       content:"";
       position:absolute; inset:0;
@@ -79,7 +99,7 @@
     .paper > *{ position:relative; }
 
     .logo{
-      width: 185px;                  /* slightly smaller to match ref */
+      width: 185px;
       max-width: 56vw;
       height:auto;
       display:block;
@@ -89,17 +109,17 @@
 
     h1{
       margin: 0 0 10px;
-      font-size: 44px;               /* reduced so it matches your image */
+      font-size: 44px;
       line-height: 1.06;
       letter-spacing: .15px;
       font-weight: 700;
     }
 
     p{
-      margin: 0 0 10px;              /* more breathing room */
+      margin: 0 0 10px;
       font-size: 18px;
       color: rgba(43,38,32,.80);
-      line-height: 1.45;             /* fixes cramped feel */
+      line-height: 1.45;
     }
 
     .gold{
@@ -117,7 +137,7 @@
     }
 
     .divider{
-      margin: 14px auto 14px;        /* equal spacing above/below */
+      margin: 14px auto 14px;
       width: min(520px, 90%);
       height: 1px;
       background: rgba(43,38,32,.25);
@@ -161,7 +181,7 @@
     }
 
     .icon-btn{
-      width: 64px;                   /* slightly smaller like ref */
+      width: 64px;
       height: 64px;
       border-radius: 18px;
       display:grid;
@@ -185,7 +205,6 @@
       fill: #fff;
     }
 
-    /* Mobile */
     @media (max-width: 560px){
       body{ padding: 12px; }
       .stage{ min-height: 84vh; padding: 16px 12px; }
